tests/algorithms/x/OCaml/maths/mobius_function.ml
(* Generated by Mochi transpiler v0.10.63 on 2025-08-12 07:47 +0700 *)


let rec __is_list v =
  let open Obj in
  let r = repr v in
  if is_int r then (magic v : int) = 0
  else
    match tag r with
    | 0 ->
        let t = field r 1 in
        if is_int t then (magic t : int) = 0
        else __is_list (magic t)
    | _ -> false

let rec __show v =
  let open Obj in
  let r = repr v in
  if __is_list v then
    __show_list (Obj.magic v)
  else if is_int r then
    string_of_int (magic v : int)
  else
    match tag r with
    | 0 -> __show_tuple (Obj.magic v)
    | 252 -> Printf.sprintf "'%s'" (String.escaped (magic v : string))
    | 253 -> string_of_float (magic v)
    | _ -> "<value>"
and __show_list l =
  match l with
  | [] -> "[]"
  | _ -> "[" ^ String.concat " " (List.map __show l) ^ "]"
and __show_tuple t =
  let open Obj in
  let r = repr t in
  let rec aux i =
    if i >= size r then []
    else __show (Obj.obj (field r i)) :: aux (i + 1)
  in
  "(" ^ String.concat ", " (aux 0) ^ ")"
and __str v =
  let open Obj in
  let r = repr v in
  if __is_list v then
    __str_list (Obj.magic v)
  else if is_int r then
    string_of_int (magic v : int)
  else
    match tag r with
    | 0 -> __str_tuple (Obj.magic v)
    | 252 -> (magic v : string)
    | 253 -> string_of_float (magic v)
    | _ -> "<value>"
and __str_list l =
  match l with
  | [] -> "[]"
  | _ -> "[" ^ String.concat " " (List.map __str l) ^ "]"
and __str_tuple t =
  let open Obj in
  let r = repr t in
  let rec aux i =
    if i >= size r then []
    else __str (Obj.obj (field r i)) :: aux (i + 1)
  in
  "(" ^ String.concat ", " (aux 0) ^ ")"


let nil = Obj.repr 0


let _now_seed = ref 0
let _now_seeded = ref false

let _now () =
  if not !_now_seeded then (
    match Sys.getenv_opt "MOCHI_NOW_SEED" with
    | Some s -> (try _now_seed := int_of_string s; _now_seeded := true with _ -> ())
    | None -> ()
  );
  if !_now_seeded then (
    _now_seed := (!(_now_seed) * 1664525 + 1013904223) mod 2147483647;
    !_now_seed
  ) else int_of_float (Sys.time () *. 1000000000.)


let _mem () =
  int_of_float (Gc.allocated_bytes ())

exception Break
exception Continue

exception Return

let rec primeFactors n =
  let __ret = ref ([] : (int) list) in
  (try
  n := (Obj.magic !n : int);
  let i = ref (2) in
  let factors = ref (([] : (int) list)) in
  (try while ((!i * !i) <= !n) do
    try
  if (((!n mod !i + !i) mod !i) = 0) then (
  factors := (Obj.magic (List.append (!factors) [(Obj.magic (!i) : int)]) : int list);
  n := (!n / !i);
  ) else (
  i := (!i + 1);
  );
    with Continue -> ()
  done with Break -> ());
  if (!n > 1) then (
  factors := (Obj.magic (List.append (!factors) [(Obj.magic (!n) : int)]) : int list);
  );
  __ret := (Obj.magic (!factors) : int list); raise Return
  with Return -> !__ret)

and isSquareFree factors =
  let __ret = ref false in
  (try
  let factors = (Obj.magic factors : int list) in
  let seen = ref ([] : (string * bool) list) in
  (try List.iter (fun f ->
    try
  if (List.mem_assoc f !seen) then (
  __ret := (Obj.magic (false) : bool); raise Return
  );
  seen := ((__str (f), true) :: List.remove_assoc (__str (f)) (!seen));
    with Continue -> ()) (factors) with Break -> ());
  __ret := (Obj.magic (true) : bool); raise Return
  with Return -> !__ret)

and mobius n =
  let __ret = ref 0 in
  (try
  let n = (Obj.magic n : int) in
  let factors = ref (primeFactors (ref (n))) in
  if isSquareFree (!factors) then (
  __ret := (Obj.magic (if (((List.length (!factors) mod 2 + 2) mod 2) = 0) then 1 else -(1)) : int); raise Return
  );
  __ret := (Obj.magic (0) : int); raise Return
  with Return -> !__ret)


let () =
  let mem_start = _mem () in
  let start = _now () in
  print_endline (string_of_int (mobius (Obj.repr (24))));
  print_endline (string_of_int (mobius (Obj.repr (-(1)))));
  let finish = _now () in
  let mem_end = _mem () in
  let dur = (finish - start) / 1000 in
  let mem_bytes = Stdlib.max 0 (mem_end - mem_start) in
  Printf.printf "{\n  \"duration_us\": %d,\n  \"memory_bytes\": %d,\n  \"name\": \"%s\"\n}\n" dur mem_bytes "main";
  ()
